# JNU_CourseSnatcher

./: .gitignore  JNU_CourseSnatcher.spec  README.md  core.py  gui.py  jnu_qiangke_1.1.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  抢课版本优化多个选课.py  选课脚本教程.docx
jnu_snatcher/: __init__.py  api.py  config.py  credentials.py  sniffer.py
jnu_snatcher/gui/: __init__.py  embedded_browser.py  main_window.py  theme.py  workers.py
tests/: test_core.py
